# ImGUI_colorer

./: .gitignore  CMakeLists.txt  README.md
data/: catalog.xml  xslt.bat
data/4ever2take5/: 4ever2take5.hrc.xsl  4ever2take5.hrd.xsl  pmd.pl  xsl-transform.pl
data/ant/: util.xml
data/con2rgb/: build.xml  con2rgb.properties
data/con2rgb/hcd/: ansi.xml  mirror.xml
data/dtd2xsd/: dtd2bnf.pl  dtd2xsd.html  dtd2xsd.pl
data/hrc/: changes.txt  ini.ent.hrc  msg.ent.hrc  php-prot.ent.hrc  proto.hrc
data/hrc/auto/: ccsql.hrc  far.hrc  gen.hrc  litestep.hrc  qrm.hrc  rare-scripts.hrc  vim.hrc
data/hrc/auto/far/: farhelp.hrc  farlng.hrc  farmailscript.hrc  farmenu.hrc  macro.hrc
data/hrc/auto/qrm/: atl.hrc  dii.hrc  rpt.hrc
data/hrc/auto/types/: edif.hrc  postscript.hrc
data/hrc/base/: c.hrc  cpp.hrc  csharp.hrc  forth.hrc  idl.hrc  java.hrc  pascal.hrc  perl-keywords.ent.hrc  perl-vars.ent.hrc  perl-vars.internal.hack.ent.hrc  perl.hrc  vbasic.hrc
data/hrc/db/: foxpro.hrc  sql.hrc
data/hrc/inet/: actionscript.hrc  asp.hrc  coldfusion.hrc  css.hrc  html-css.hrc  html-entity.hrc  html.hrc  jscript.hrc  php-gen.ent.hrc  php-script.ent.hrc  php.hrc  svg.hrc  vbscript.hrc  xhtml-frameset.hrc  xhtml-strict.hrc  xhtml-trans.hrc
data/hrc/lib/: default.hrc  far-macro-string.ent.hrc  far.hrc  regexp.hrc
data/hrc/misc/: diff.hrc  text.hrc
data/hrc/rare/: 1c.hrc  abap4.hrc  awk.hrc  cobol.hrc  matlab.hrc  modula.hrc  python.hrc  ruby.hrc  sprolog.hrc  tcltk.hrc  tprolog.hrc  vhdl.hrc
data/hrc/scripts/: apache.hrc  avisynth.hrc  batch.hrc  bkt.hrc  colorer5catalog.hrc  config.hrc  ent.hrc.hrc  hrc.hrc  hrd.hrc  makefile.hrc  nsi.hrc  sh.hrc  tex.hrc  xsd2hrc.custom.hrc
data/hrc/scripts/ini/: bootini.hrc  configsys.hrc  ini.hrc  msdossys.hrc  reg.hrc
data/hrc/scripts/msg/: email.hrc  farmsg.hrc  fidomsg.hrc  pms.hrc
data/hrc/xml/: dtd.hrc  relaxng.hrc  wsdl-soap.hrc  wsdl.hrc  xinclude.hrc  xlink.hrc  xml.hrc  xmlns.hrc  xmlschema.hrc  xpath.hrc  xpath.internal.hack.ent.hrc  xpath2.hrc  xquery.hrc  xslt.hrc  xslt2.hrc
data/hrd/console/: black.hrd  blue.hrd  default.hrd  dnlike.hrd  gray.hrd  hack.hrd  mirror.hrd  nc.hrd  white.hrd
data/hrd/console/contrib/: black_ay.hrd  black_sezal.hrd  classic.hrd  cyberpunk.hrd  gray_pult.hrd  ocean.hrd
data/hrd/css/: build.xml  hrd2css.properties  mirice.css  navy.css  white.css
data/hrd/rgb/: hs.hrd
data/hrd/rgb/contrib/: bred3.hrd
data/hrd/text/: tags.hrd
data/hrd2css/: hrd2css.pl  hrd2css.xsl
data/xsd2hrc/: xsd2hrc.callable.xsl  xsd2hrc.include-content.xsl  xsd2hrc.replace-patterns.xml  xsd2hrc.typedefs.xsl  xsd2hrc.xmlss.xsl
main/: LogWindow.cpp  TextEditor.cpp  TextEditor.h  main.cpp
main/CText/: CTextT.h  CTextT.inl  CTextU.h
main/FileBrowser/: ImGuiFileBrowser.cpp
shared/: _dependencies.dep  _makefile.deps.pl  colorer-doc.cpp  makefile.colorer.cygwin  makefile.colorer.gcc  makefile.colorer.solarisgcc  makefile.colorer.vc  makefile.lines  makefile.zlib
shared/colorer/: FileType.h  HRCParser.h  ParserFactory.cpp  ParserFactory.h
shared/colorer/editor/: BaseEditor.cpp  BaseEditor.h
shared/colorer/handlers/: LineRegionsCompactSupport.cpp  RegionDefine.h  StyledHRDMapper.cpp  StyledRegion.h  TextRegion.h
shared/colorer/parsers/: HRCParserImpl.cpp  HRCParserImpl.h  TextParserImpl.cpp
shared/colorer/parsers/helpers/: FileTypeImpl.h  HRCParserHelpers.h  TextParserHelpers.cpp  TextParserHelpers.h
shared/colorer/viewer/: ConsoleTools.cpp  ConsoleTools.h  TextConsoleViewer.cpp  TextLinesStore.cpp  TextLinesStore.h
shared/colorer_doc/: footer.html
shared/common/: Logging.cpp  Logging.h  MemoryChunks.cpp  MemoryChunks.h  Vector.h
shared/common/io/: FileInputSource.cpp  HTTPInputSource.cpp  InputSource.cpp  JARInputSource.cpp  MemoryFile.h  SharedInputSource.cpp  SharedInputSource.h  StreamWriter.cpp  StringWriter.cpp  StringWriter.h
shared/cregexp/: cregexp.cpp  cregexp.h
shared/exparse/: blockdef.cpp  exparse.cpp  exparse.h  sarg.cpp  sarg.h  syntax.cpp  tools.cpp
shared/farplugin/: farcolor.hpp  farkeys.hpp  fmt.hpp  plugin.def  plugin.hpp
shared/misc/: clipbrd.cpp  malloc.c  registry.cpp
shared/unicode/: BitArray.cpp  Character.h  CharacterClass.cpp  CharacterClass.h  DString.cpp  DString.h  Encodings.cpp  SString.cpp  SString.h  String.cpp  String.h  UnicodeTools.cpp
shared/xml/: xmldom.cpp  xmldom.h
zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
zlib/contrib/minizip/: iowin32.c  iowin32.h  miniunz.c  minizip.c  zconf.h  zip.c
